# lepton

./: .gitignore  readme.md
ESP32/: readme.md
ESP32/DesktopApp/: readme.md
ESP32/WebApp/: readme.md
ESP32/programming/: readme.md
ESP32/python/: __init__.py  ioctl_numbers.py  readme.md  tcam.py
ESP32/tCam-Mini/: readme.md
ESP32/tCam-Mini/firmware/main/: CMakeLists.txt  cmd_task.c  cmd_task.h  component.mk  ctrl_task.c  ctrl_task.h  lep_task.c  lep_task.h  main.c  mon_task.c  mon_task.h  net_cmd_task.c  net_cmd_task.h  rsp_task.c  rsp_task.h  sif_cmd_task.c  sif_cmd_task.h  system_config.h  wifi_cmd_task.c  wifi_cmd_task.h
beaglebone/: readme.md
beaglebone/littlevgl_devicetree/: BB-TOUCH-TFT.dtbo  BB-TOUCH-TFT.dts  readme.md
beaglebone/pru_rpmsg_fb/: readme.md  uEnv.txt
leptonic-vsync/: Makefile
leptonic-vsync/include/: leptonic.h
pocketbeagle/: readme.md
pocketbeagle/bbb_platter/: bbb_platter.X.production.hex  readme.md
pocketbeagle/enclosure/: base.scad  base.stl  button.scad  button.stl  front2.scad  front2.stl  rear_lens.scad  rear_lens.stl  rear_smooth.scad  rear_smooth.stl  side1.scad  side1.stl  side2.scad  side2.stl  top.scad  top.stl
pocketbeagle/littlevgl_demo/: PB-TOUCH-TFT.dtbo  PB-TOUCH-TFT.dts  readme.md  uEnv.txt
pocketbeagle/pru_rpmsg_fb/: rc.local  readme.md  uEnv.txt
raspberrypi/: readme.md
teensy3/: readme.md
teensy3/LeptonSDKEmb32OEM/: LeptonSDKEmb32OEM.cpp  LeptonSDKEmb32OEM.h  keywords.txt
teensy3/lep_test10/: lep_test10.ino
teensy3/lep_test5/: colormaps.h  lep_test5.ino
teensy3/lep_test6/: lep_test6.ino
(+234 files in other folders)
